- Refactor the berries details and main page modules to improve readability and maintainability. - Refactor MainPage component, add dark mode toggle button, implement context for filtering and fix menu position transition.

--- a/src/components/Berries/BerriesDetails.module.scss
+++ b/src/components/Berries/BerriesDetails.module.scss
@@ -1,6 +1,7 @@
 .berriesDetails {
+    box-sizing: border-box;
     width: 350px;
-    margin: 2rem auto;
+    margin: 0 auto;
     background: linear-gradient(52.41deg, #FFE1C6 4.87%, #FFCB05 94.37%);
     border-radius: 20px;
     padding: 1.5rem 1.5rem;
