--- a/src/pages/mainPage/mainPage.module.scss
+++ b/src/pages/mainPage/mainPage.module.scss
@@ -68,7 +68,7 @@
 	background: rgb(20, 20, 20);
 
 	header {
-		form {
+		section {
 			button {
 				img {
 					filter: invert(100%) brightness(100%) saturate(0);
